    meta-predicate directives and meta-predicate directive arguments.

    Improved compilation of call/2-N goals.

    Improved performance of the lambda expression Free/Goal, usually used in
    bagof/3 and setof/3 calls.

    Improved lambda expression error-checking and added support for using a
    (>>)/2 lambda expression as a goal.

    Corrected a typo in the exception term generated when sending a message to
    an object corresponding to a built-in local method.

    Updated the CxProlog config file in order to set write term and write list
    limits that allow compilation of the Logtalk libraries and examples (the
    default values are two low in some cases leading to compilation errors).
    In addition, take advantage of the new "version_data" flag, thus requiring
    version 0.97.4 or a later version.

    Updated the SWI-Prolog config file in order to recognize and compile the
    proprietary directive at_halt/1.

    Expanded the "lambdas" example with a contribution by Artur Miguel Dias
    and with more sample queries (including non-deterministic ones).

    Added syntax coloring support for the ^/2 existential quantifier operator
    for most supported text editors and syntax highlighters. Added sample code
    using the ^/2 existential quantifier to the syntax coloring test file.


2.38.0 - December 3, 2009

    Added lambda expression support. Added an example, "lambdas", illustrating
    the use of lambda expressions.

    Added a new compiler flag, "clean", for cleaning the intermediate Prolog
    files generated when compiling Logtalk source files.

    Simplified representation of the runtime execution context using a simple
    list resulting in a small performance increase for some back-end Prolog
    compilers such as B-Prolog.

    Added support for using the set_logtalk_flag/2 directive within Logtalk
    entities. This allows e.g. easy setting of entity properties such as